--- a/wiki/it/External_workbenches.html
+++ b/wiki/it/External_workbenches.html
@@ -2,7 +2,7 @@
 <li><a href="../de/External_workbenches.html" class="mw-pt-progress mw-pt-progress--complete" title="Externe Arbeitsbereiche (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../External_workbenches.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="External workbenches (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/External_workbenches.html" class="mw-pt-progress mw-pt-progress--med" title="Bancos de trabajo externos (53% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/External_workbenches.html" class="mw-pt-progress mw-pt-progress--high" title="Ateliers externes (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/External_workbenches.html" class="mw-pt-progress mw-pt-progress--complete" title="Ateliers externes (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/External_workbenches.html" class="mw-pt-progress mw-pt-progress--complete" title="Zewn&#281;trzne &#347;rodowiska pracy (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="External workbenches (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
@@ -2081,33 +2081,33 @@ Questi ambienti sono generalmente incompatibili l'uno con l'altro. Se si crea un
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112102712
+Cached time: 20260118041514
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.380 seconds
-Real time usage: 0.556 seconds
+CPU time usage: 0.396 seconds
+Real time usage: 0.473 seconds
 Preprocessor visited node count: 502/1000000
 Post&#8208;expand include size: 8062/2097152 bytes
 Template argument size: 2389/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2776/5000000 bytes
+Unstrip post&#8208;expand size: 2781/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.895      1 -total
- 40.28%    6.806      1 Template:Userdocnavi/it
- 20.65%    3.489      1 Template:Navigation_menu_2
- 14.67%    2.479      2 Template:Docnav/it
- 10.44%    1.764      1 Template:Version/it
- 10.34%    1.746      1 Template:TOCright
-  9.35%    1.580      1 Template:KEY
-  9.27%    1.566      2 Template:FileName
+100.00%   13.397      1 -total
+ 38.41%    5.146      1 Template:Userdocnavi/it
+ 20.78%    2.784      2 Template:Docnav/it
+ 15.83%    2.121      1 Template:Navigation_menu_2
+ 14.49%    1.941      1 Template:Version/it
+  7.11%    0.952      1 Template:TOCright
+  6.94%    0.929      1 Template:KEY
+  6.37%    0.854      2 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61635-0!canonical and timestamp 20260112102711 and revision id 1737383. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61635-0!canonical and timestamp 20260118041514 and revision id 1737383. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
