--- a/wiki/it/Fasteners_ChangeParameters.html
+++ b/wiki/it/Fasteners_ChangeParameters.html
@@ -82,12 +82,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112123958
+Cached time: 20260118041517
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.049 seconds
-Real time usage: 0.074 seconds
+CPU time usage: 0.071 seconds
+Real time usage: 0.100 seconds
 Preprocessor visited node count: 180/1000000
 Post&#8208;expand include size: 6045/2097152 bytes
 Template argument size: 1591/2097152 bytes
@@ -98,16 +98,16 @@ Unstrip post&#8208;expand size: 1526/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.660      1 -total
- 43.08%    8.039      1 Template:Fasteners_Tools_navi/it
- 22.42%    4.183      1 Template:GuiCommand/it
- 13.17%    2.458      1 Template:Navigation_menu_2
- 11.99%    2.238      2 Template:Docnav/it
- 10.86%    2.026      1 Template:Button
-  7.53%    1.406      7 Template:MenuCommand
+100.00%   14.521      1 -total
+ 50.52%    7.336      1 Template:Fasteners_Tools_navi/it
+ 17.30%    2.512      1 Template:GuiCommand/it
+ 14.43%    2.095      2 Template:Docnav/it
+ 10.46%    1.519      1 Template:Navigation_menu_2
+  7.50%    1.088      7 Template:MenuCommand
+  5.87%    0.852      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:354676-0!canonical and timestamp 20260112123958 and revision id 1737468. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:354676-0!canonical and timestamp 20260118041517 and revision id 1737468. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
