--- a/wiki/it/FreeCAD_and_DWG_Import.html
+++ b/wiki/it/FreeCAD_and_DWG_Import.html
@@ -2,7 +2,7 @@
 <li><a href="../de/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD und DWG-Import (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../FreeCAD_and_DWG_Import.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FreeCAD and DWG Import (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--med" title="Importaci&oacute;n de FreeCAD y DWG (42% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--high" title="FreeCAD et l'importation DWG (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD et l'importation DWG (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD i import DWG (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--low" title="FreeCAD e Importa&ccedil;&atilde;o DWG (4% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
@@ -144,34 +144,34 @@ Per visualizzare queste opzioni, visitare <a rel="nofollow" class="external text
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112110423
+Cached time: 20260118041524
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.145 seconds
+CPU time usage: 0.079 seconds
+Real time usage: 0.106 seconds
 Preprocessor visited node count: 363/1000000
 Post&#8208;expand include size: 17074/2097152 bytes
 Template argument size: 6499/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3093/5000000 bytes
+Unstrip post&#8208;expand size: 3098/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.158      1 -total
- 34.88%   12.962      1 Template:Draft_Tools_navi/it
- 29.05%   10.794      1 Template:Userdocnavi/it
- 16.97%    6.306      2 Template:Navigation_menu_2
- 11.24%    4.178      5 Template:Version/it
-  6.43%    2.390      3 Template:Incode
-  6.16%    2.288      2 Template:Code
-  4.58%    1.702      1 Template:Fake_heading
-  4.42%    1.644      1 Template:TOCright
+100.00%   17.672      1 -total
+ 38.88%    6.870      1 Template:Draft_Tools_navi/it
+ 20.74%    3.665      2 Template:Navigation_menu_2
+ 15.79%    2.790      1 Template:Userdocnavi/it
+ 11.11%    1.964      1 Template:Fake_heading
+  9.03%    1.596      2 Template:Code
+  8.52%    1.505      5 Template:Version/it
+  5.88%    1.039      3 Template:Incode
+  5.52%    0.976      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:46676-0!canonical and timestamp 20260112110423 and revision id 1737405. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:46676-0!canonical and timestamp 20260118041524 and revision id 1737405. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
