--- a/wiki/it/How_to_install_macros.html
+++ b/wiki/it/How_to_install_macros.html
@@ -449,12 +449,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112110738
+Cached time: 20260118050004
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.181 seconds
-Real time usage: 0.277 seconds
+CPU time usage: 0.301 seconds
+Real time usage: 0.358 seconds
 Preprocessor visited node count: 1321/1000000
 Post&#8208;expand include size: 40412/2097152 bytes
 Template argument size: 6890/2097152 bytes
@@ -465,19 +465,19 @@ Unstrip post&#8208;expand size: 6400/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.182      1 -total
- 13.68%    5.909     41 Template:Caption
- 11.42%    4.932      1 Template:Powerdocnavi/it
-  9.98%    4.310      7 Template:Code
-  7.59%    3.276      1 Template:TutorialInfo/it
-  6.60%    2.850     33 Template:Incode
-  5.73%    2.473     10 Template:Button
-  5.62%    2.426      2 Template:VersionMinus
-  5.54%    2.392      2 Template:VersionPlus
-  4.67%    2.015     15 Template:MenuCommand
+100.00%   43.740      1 -total
+ 19.76%    8.645      1 Template:Powerdocnavi/it
+ 13.91%    6.083     41 Template:Caption
+  9.18%    4.017      7 Template:Code
+  6.90%    3.018      1 Template:Navigation_menu_2
+  5.92%    2.588      1 Template:TutorialInfo/it
+  5.50%    2.408     33 Template:Incode
+  4.40%    1.926      6 Template:KEY
+  4.04%    1.766      1 Template:Clear
+  3.88%    1.695     10 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54228-0!canonical and timestamp 20260112110738 and revision id 1737411. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54228-0!canonical and timestamp 20260118050004 and revision id 1737411. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
