--- a/wiki/Installing_on_Linux.html
+++ b/wiki/Installing_on_Linux.html
@@ -224,12 +224,12 @@ releases from the github repository. These also tend to work on most x86_64 Linu
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117161216
+Cached time: 20260118043836
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.142 seconds
+CPU time usage: 0.117 seconds
+Real time usage: 0.157 seconds
 Preprocessor visited node count: 700/1000000
 Post&#8208;expand include size: 9350/2097152 bytes
 Template argument size: 3483/2097152 bytes
@@ -240,19 +240,19 @@ Unstrip post&#8208;expand size: 12849/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.104      1 -total
- 28.26%    5.963     18 Template:Code
- 16.28%    3.435      1 Template:Userdocnavi
- 10.29%    2.172      1 Template:Navigation_menu_2
-  9.55%    2.016      2 Template:Docnav
-  6.24%    1.317      1 Template:TOCright
-  6.23%    1.314      7 Template:Emphasis
-  5.83%    1.230     13 Template:Incode
-  5.32%    1.123      1 Template:KEY
-  4.88%    1.029      3 Template:MenuCommand
+100.00%   23.579      1 -total
+ 28.66%    6.758     18 Template:Code
+ 18.16%    4.282      1 Template:Userdocnavi
+ 10.70%    2.522      1 Template:Navigation_menu_2
+  9.15%    2.157      2 Template:Docnav
+  6.37%    1.502     13 Template:Incode
+  6.23%    1.469      1 Template:KEY
+  5.27%    1.243      7 Template:Emphasis
+  4.71%    1.111      1 Template:Button
+  4.06%    0.958      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199690-0!canonical and timestamp 20260117161258 and revision id 1739614. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199690-0!canonical and timestamp 20260118043836 and revision id 1739614. Rendering was triggered because: unknown
  -->
 </div>
 </div><script src="site.js"></script>
