--- a/wiki/bg/Localisation.html
+++ b/wiki/bg/Localisation.html
@@ -325,12 +325,12 @@ This <a rel="nofollow" class="external text" href="https://forum.freecad.org/vie
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117100619
+Cached time: 20260118050017
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.116 seconds
-Real time usage: 0.188 seconds
+CPU time usage: 0.127 seconds
+Real time usage: 0.165 seconds
 Preprocessor visited node count: 466/1000000
 Post&#8208;expand include size: 9442/2097152 bytes
 Template argument size: 3764/2097152 bytes
@@ -341,19 +341,19 @@ Unstrip post&#8208;expand size: 11405/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.866      1 -total
- 24.71%    8.614      1 Template:Userdocnavi/bg
- 15.79%    5.505      8 Template:Code
-  9.33%    3.254      1 Template:MenuCommand
-  9.24%    3.220      2 Template:Docnav
-  8.87%    3.093      1 Template:Navigation_menu_2
-  7.55%    2.634      1 Template:Button
-  6.32%    2.202      1 Template:Message
-  5.64%    1.968      6 Template:Incode
-  5.54%    1.933      1 Template:TOCright
+100.00%   23.017      1 -total
+ 25.86%    5.952      1 Template:Userdocnavi/bg
+ 15.86%    3.651      8 Template:Code
+ 11.48%    2.643      1 Template:Navigation_menu_2
+ 10.07%    2.318      1 Template:Message
+  8.69%    2.001      2 Template:Docnav
+  7.34%    1.689      6 Template:Incode
+  5.71%    1.315      1 Template:Button
+  4.71%    1.085      3 Template:Emphasis
+  4.66%    1.072      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:101661-0!canonical and timestamp 20260117100618 and revision id 1739422. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:101661-0!canonical and timestamp 20260118050017 and revision id 1739422. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
