--- a/wiki/it/Macro_CloneConvert.html
+++ b/wiki/it/Macro_CloneConvert.html
@@ -198,12 +198,12 @@ km, hm, dam, m, dm, cm, <b>mm</b>, &micro;m, nm, inch, link, foot, yard, perch, 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260116164457
+Cached time: 20260118050023
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.064 seconds
+CPU time usage: 0.068 seconds
+Real time usage: 0.092 seconds
 Preprocessor visited node count: 201/1000000
 Post&#8208;expand include size: 6442/2097152 bytes
 Template argument size: 1216/2097152 bytes
@@ -214,14 +214,14 @@ Unstrip post&#8208;expand size: 2166/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.271      1 -total
- 29.20%    2.999     12 Template:KEY
- 26.05%    2.676      1 Template:Codeextralink
- 24.91%    2.558      1 Template:Macro/it
- 13.14%    1.350      1 Template:Clear
+100.00%   14.042      1 -total
+ 46.30%    6.502      1 Template:Codeextralink
+ 20.97%    2.944      1 Template:Macro/it
+ 16.25%    2.281     12 Template:KEY
+  8.84%    1.241      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28193-0!canonical and timestamp 20260116164457 and revision id 1739125. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28193-0!canonical and timestamp 20260118050023 and revision id 1739125. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
