--- a/wiki/it/Macro_Ellipse-Center+2Points.html
+++ b/wiki/it/Macro_Ellipse-Center+2Points.html
@@ -126,12 +126,12 @@ except:
     print( "First:centre, Second:major radius and Third:minor radius")</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260113164628
+Cached time: 20260118050026
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.028 seconds
-Real time usage: 0.044 seconds
+CPU time usage: 0.057 seconds
+Real time usage: 0.083 seconds
 Preprocessor visited node count: 88/1000000
 Post&#8208;expand include size: 2107/2097152 bytes
 Template argument size: 2115/2097152 bytes
@@ -142,12 +142,12 @@ Unstrip post&#8208;expand size: 3043/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.675      1 -total
- 56.13%    2.063      1 Template:Macro/it
- 41.72%    1.533      1 Template:MacroCode
+100.00%    3.206      1 -total
+ 63.19%    2.026      1 Template:Macro/it
+ 33.94%    1.088      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:18729-0!canonical and timestamp 20260113164628 and revision id 1737881. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:18729-0!canonical and timestamp 20260118050026 and revision id 1737881. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
