--- a/wiki/it/Macro_FCCamera.html
+++ b/wiki/it/Macro_FCCamera.html
@@ -294,12 +294,12 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/4aa545c23b323cf6882
 <ul><li><b>ver 0.2 25/02/2015&nbsp;:</b> correct names files in for compatibility Linux (case sensitive) thanks microelly2</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114133624
+Cached time: 20260118050028
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.124 seconds
+CPU time usage: 0.127 seconds
+Real time usage: 0.151 seconds
 Preprocessor visited node count: 334/1000000
 Post&#8208;expand include size: 9062/2097152 bytes
 Template argument size: 2717/2097152 bytes
@@ -310,15 +310,15 @@ Unstrip post&#8208;expand size: 14497/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.953      1 -total
-  7.22%    3.966      1 Template:Macro/it
-  6.21%    3.415      3 Template:Code
-  5.94%    3.262     17 Template:KEY
-  5.33%    2.927      1 Template:Codeextralink
-  4.26%    2.339      4 Template:Clear
+100.00%   50.109      1 -total
+  4.15%    2.079      3 Template:Code
+  3.88%    1.942      1 Template:Macro/it
+  2.57%    1.288     17 Template:KEY
+  2.32%    1.163      1 Template:Codeextralink
+  1.80%    0.902      4 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55888-0!canonical and timestamp 20260114133624 and revision id 1738165. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:55888-0!canonical and timestamp 20260118050028 and revision id 1738165. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
