--- a/wiki/it/Macro_FCGear.html
+++ b/wiki/it/Macro_FCGear.html
@@ -113,12 +113,12 @@ Ingranaggi
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114123611
+Cached time: 20260118050031
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.041 seconds
-Real time usage: 0.077 seconds
+CPU time usage: 0.065 seconds
+Real time usage: 0.079 seconds
 Preprocessor visited node count: 107/1000000
 Post&#8208;expand include size: 2440/2097152 bytes
 Template argument size: 368/2097152 bytes
@@ -129,14 +129,14 @@ Unstrip post&#8208;expand size: 1317/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.346      1 -total
- 31.44%    1.995      1 Template:Macro/it
- 30.93%    1.963      1 Template:VeryImportantMessage
- 19.07%    1.210      1 Template:Caption
- 14.33%    0.909      1 Template:Clear
+100.00%    5.409      1 -total
+ 33.59%    1.817      1 Template:Macro/it
+ 22.61%    1.223      1 Template:Caption
+ 21.34%    1.154      1 Template:VeryImportantMessage
+ 15.18%    0.821      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62417-0!canonical and timestamp 20260114123611 and revision id 1738142. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62417-0!canonical and timestamp 20260118050031 and revision id 1738142. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
