--- a/wiki/it/Macro_Geodesic_Dome.html
+++ b/wiki/it/Macro_Geodesic_Dome.html
@@ -434,12 +434,12 @@ d.show()
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260113170236
+Cached time: 20260118050040
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.028 seconds
-Real time usage: 0.047 seconds
+CPU time usage: 0.053 seconds
+Real time usage: 0.069 seconds
 Preprocessor visited node count: 104/1000000
 Post&#8208;expand include size: 2660/2097152 bytes
 Template argument size: 999/2097152 bytes
@@ -450,12 +450,12 @@ Unstrip post&#8208;expand size: 14190/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.261      1 -total
- 55.01%    2.894      1 Template:Macro/it
- 43.34%    2.280      1 Template:Codeextralink
+100.00%    4.746      1 -total
+ 52.63%    2.498      1 Template:Codeextralink
+ 45.41%    2.155      1 Template:Macro/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54914-0!canonical and timestamp 20260113170236 and revision id 1737907. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:54914-0!canonical and timestamp 20260118050040 and revision id 1737907. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
