--- a/wiki/it/Macro_Rectellipse.html
+++ b/wiki/it/Macro_Rectellipse.html
@@ -148,12 +148,12 @@ if __name__ == "__main__":
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260114134158
+Cached time: 20260118050044
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.049 seconds
+CPU time usage: 0.068 seconds
+Real time usage: 0.087 seconds
 Preprocessor visited node count: 89/1000000
 Post&#8208;expand include size: 1989/2097152 bytes
 Template argument size: 2788/2097152 bytes
@@ -164,12 +164,12 @@ Unstrip post&#8208;expand size: 3833/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.530      1 -total
- 67.37%    3.052      1 Template:Macro/it
- 30.25%    1.370      1 Template:MacroCode
+100.00%    4.578      1 -total
+ 54.23%    2.483      1 Template:Macro/it
+ 43.54%    1.993      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2347-0!canonical and timestamp 20260114134158 and revision id 1738173. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2347-0!canonical and timestamp 20260118050044 and revision id 1738173. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
