--- a/wiki/it/Macro_Site_From_Contours.html
+++ b/wiki/it/Macro_Site_From_Contours.html
@@ -158,12 +158,12 @@ FreeCAD.ActiveDocument.recompute()</pre>
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260113165811
+Cached time: 20260118050049
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.026 seconds
-Real time usage: 0.038 seconds
+CPU time usage: 0.066 seconds
+Real time usage: 0.077 seconds
 Preprocessor visited node count: 89/1000000
 Post&#8208;expand include size: 2455/2097152 bytes
 Template argument size: 2703/2097152 bytes
@@ -174,12 +174,12 @@ Unstrip post&#8208;expand size: 3053/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.994      1 -total
- 51.65%    2.063      1 Template:Macro/it
- 46.29%    1.849      1 Template:MacroCode
+100.00%    4.117      1 -total
+ 61.57%    2.535      1 Template:Macro/it
+ 35.63%    1.467      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:105091-0!canonical and timestamp 20260113165811 and revision id 1737895. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:105091-0!canonical and timestamp 20260118050049 and revision id 1737895. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
