--- a/wiki/it/Macro_SpreadsheetTools.html
+++ b/wiki/it/Macro_SpreadsheetTools.html
@@ -567,12 +567,12 @@ form.show()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114134524
+Cached time: 20260118050052
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
-Real time usage: 0.069 seconds
+CPU time usage: 0.062 seconds
+Real time usage: 0.092 seconds
 Preprocessor visited node count: 99/1000000
 Post&#8208;expand include size: 2589/2097152 bytes
 Template argument size: 21244/2097152 bytes
@@ -583,14 +583,14 @@ Unstrip post&#8208;expand size: 21794/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.233      1 -total
- 34.36%    4.891      1 Template:Macro/it
- 30.24%    4.304      1 Template:MacroCode
- 20.71%    2.947      1 Template:Clear
- 10.89%    1.550      1 Template:AddOnObsolete
+100.00%   12.760      1 -total
+ 64.05%    8.173      1 Template:AddOnObsolete
+ 16.39%    2.091      1 Template:Macro/it
+  9.49%    1.211      1 Template:MacroCode
+  7.14%    0.911      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:88198-0!canonical and timestamp 20260114134524 and revision id 1738185. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:88198-0!canonical and timestamp 20260118050052 and revision id 1738185. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
