--- a/wiki/it/Main_View_Area.html
+++ b/wiki/it/Main_View_Area.html
@@ -45,12 +45,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112121533
+Cached time: 20260118050106
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.042 seconds
-Real time usage: 0.074 seconds
+CPU time usage: 0.061 seconds
+Real time usage: 0.081 seconds
 Preprocessor visited node count: 129/1000000
 Post&#8208;expand include size: 9692/2097152 bytes
 Template argument size: 2749/2097152 bytes
@@ -61,14 +61,14 @@ Unstrip post&#8208;expand size: 1866/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.401      1 -total
- 48.16%    5.491      1 Template:Interface_navi/it
- 36.98%    4.216      1 Template:Userdocnavi/it
- 23.51%    2.680      2 Template:Navigation_menu_2
- 12.89%    1.470      1 Template:Caption
+100.00%    9.043      1 -total
+ 48.26%    4.364      1 Template:Interface_navi/it
+ 35.71%    3.229      1 Template:Userdocnavi/it
+ 27.18%    2.458      2 Template:Navigation_menu_2
+ 13.09%    1.184      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:190749-0!canonical and timestamp 20260112121533 and revision id 1737432. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:190749-0!canonical and timestamp 20260118050106 and revision id 1737432. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
