--- a/wiki/bg/Manual;Introduction.html
+++ b/wiki/bg/Manual;Introduction.html
@@ -93,12 +93,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112103817
+Cached time: 20260118044503
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.059 seconds
-Real time usage: 0.099 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.092 seconds
 Preprocessor visited node count: 63/1000000
 Post&#8208;expand include size: 7952/2097152 bytes
 Template argument size: 548/2097152 bytes
@@ -109,13 +109,13 @@ Unstrip post&#8208;expand size: 4340/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.973      1 -total
- 72.50%    5.780      1 Template:Manual:TOC
- 56.89%    4.536      1 Manual:Summary/bg
- 23.62%    1.883      2 Template:Docnav
+100.00%    8.128      1 -total
+ 71.73%    5.830      1 Template:Manual:TOC
+ 57.84%    4.701      1 Manual:Summary/bg
+ 23.11%    1.878      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409904-0!canonical and timestamp 20260112103816 and revision id 1737397. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409904-0!canonical and timestamp 20260118044503 and revision id 1737397. Rendering was triggered because: unknown
  -->
 </div>
 </div><script src="../site.js"></script>
