--- a/wiki/cs/Manual;Preparing_models_for_3D_printing.html
+++ b/wiki/cs/Manual;Preparing_models_for_3D_printing.html
@@ -177,12 +177,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112140138
+Cached time: 20260118050112
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.156 seconds
+CPU time usage: 0.110 seconds
+Real time usage: 0.139 seconds
 Preprocessor visited node count: 123/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 776/2097152 bytes
@@ -193,13 +193,13 @@ Unstrip post&#8208;expand size: 2981/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.772      1 -total
- 71.07%    7.656      1 Template:Manual:TOC
- 54.24%    5.843      1 Manual:Summary/cs
- 25.63%    2.761      2 Template:Docnav
+100.00%   10.858      1 -total
+ 78.84%    8.561      1 Template:Manual:TOC
+ 47.60%    5.168      1 Manual:Summary/cs
+ 16.51%    1.792      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260112140138 and revision id 1737533. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:393593-0!canonical and timestamp 20260118050112 and revision id 1737533. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
