--- a/wiki/bg/Online_Help_Toc.html
+++ b/wiki/bg/Online_Help_Toc.html
@@ -124,7 +124,7 @@
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../bg/Getting_started.html" title="Getting started/bg">Getting started</a></b></li>
 <li><b>Installation:</b> <a href="../bg/Download.html" title="Download/bg">Download</a>, <a href="../bg/Installing_on_Windows.html" title="Installing on Windows/bg">Windows</a>, <a href="../bg/Installing_on_Linux.html" title="Installing on Linux/bg">Linux</a>, <a href="../bg/Installing_on_Mac.html" title="Installing on Mac/bg">Mac</a>, <a href="../bg/Installing_additional_components.html" title="Installing additional components/bg">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/bg (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/bg&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/bg (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/bg (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../bg/About_FreeCAD.html" title="About FreeCAD/bg">About FreeCAD</a>, <a href="../index.php?title=Interface/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/bg (page does not exist)">Interface</a>, <a href="../bg/Mouse_navigation.html" title="Mouse navigation/bg">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/bg (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/bg (page does not exist)">Object name</a>, <a href="../bg/Preferences_Editor.html" title="Preferences Editor/bg">Preferences</a>, <a href="../bg/Workbenches.html" title="Workbenches/bg">Workbenches</a>, <a href="../bg/Document_structure.html" title="Document structure/bg">Document structure</a>, <a href="../index.php?title=Property/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Property/bg (page does not exist)">Properties</a>, <a href="../bg/Help_FreeCAD.html" title="Help FreeCAD/bg">Help FreeCAD</a>, <a href="../index.php?title=Donate/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/bg (page does not exist)">Donate</a></li></ul>
+<li><b>Basics:</b> <a href="../bg/About_FreeCAD.html" title="About FreeCAD/bg">About FreeCAD</a>, <a href="../bg/Interface.html" title="Interface/bg">Interface</a>, <a href="../bg/Mouse_navigation.html" title="Mouse navigation/bg">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/bg (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/bg (page does not exist)">Object name</a>, <a href="../bg/Preferences_Editor.html" title="Preferences Editor/bg">Preferences</a>, <a href="../bg/Workbenches.html" title="Workbenches/bg">Workbenches</a>, <a href="../bg/Document_structure.html" title="Document structure/bg">Document structure</a>, <a href="../index.php?title=Property/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Property/bg (page does not exist)">Properties</a>, <a href="../bg/Help_FreeCAD.html" title="Help FreeCAD/bg">Help FreeCAD</a>, <a href="../index.php?title=Donate/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/bg (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../bg/Tutorials.html" title="Tutorials/bg">Tutorials</a>, <a href="../index.php?title=Video_tutorials/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Video tutorials/bg (page does not exist)">Video tutorials</a></li>
 <li><b><a href="../bg/Workbenches.html" title="Workbenches/bg">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/bg (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/bg (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/bg (page does not exist)">BIM</a>, <a href="../index.php?title=CAM_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="CAM Workbench/bg (page does not exist)">CAM</a>, <a href="../bg/Draft_Workbench.html" title="Draft Workbench/bg">Draft</a>, <a href="../index.php?title=FEM_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="FEM Workbench/bg (page does not exist)">FEM</a>, <a href="../index.php?title=Inspection_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Inspection Workbench/bg (page does not exist)">Inspection</a>, <a href="../index.php?title=Material_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/bg (page does not exist)">Material</a>, <a href="../bg/Mesh_Workbench.html" title="Mesh Workbench/bg">Mesh</a>, <a href="../index.php?title=OpenSCAD_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="OpenSCAD Workbench/bg (page does not exist)">OpenSCAD</a>, <a href="../index.php?title=Part_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Part Workbench/bg (page does not exist)">Part</a>, <a href="../bg/PartDesign_Workbench.html" title="PartDesign Workbench/bg">PartDesign</a>, <a href="../index.php?title=Points_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Points Workbench/bg (page does not exist)">Points</a>, <a href="../index.php?title=Reverse_Engineering_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Reverse Engineering Workbench/bg (page does not exist)">Reverse Engineering</a>, <a href="../bg/Robot_Workbench.html" title="Robot Workbench/bg">Robot</a>, <a href="../bg/Sketcher_Workbench.html" title="Sketcher Workbench/bg">Sketcher</a>, <a href="../bg/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/bg">Spreadsheet</a>, <a href="../bg/Surface_Workbench.html" title="Surface Workbench/bg">Surface</a>, <a href="../bg/TechDraw_Workbench.html" title="TechDraw Workbench/bg">TechDraw</a>, <a href="../index.php?title=Testing/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/bg (page does not exist)">Test Framework</a></li></ul>
@@ -135,12 +135,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112180153
+Cached time: 20260118050119
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.098 seconds
-Real time usage: 0.168 seconds
+CPU time usage: 0.119 seconds
+Real time usage: 0.200 seconds
 Preprocessor visited node count: 94/1000000
 Post&#8208;expand include size: 5936/2097152 bytes
 Template argument size: 1925/2097152 bytes
@@ -151,14 +151,14 @@ Unstrip post&#8208;expand size: 4519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.649      1 -total
- 48.42%    7.577      1 Template:Userdocnavi/bg
- 27.04%    4.231      2 Template:VersionMinus
- 22.02%    3.446      2 Template:Version
- 18.63%    2.915      1 Template:Navigation_menu_2
+100.00%    6.282      1 -total
+ 58.79%    3.693      1 Template:Userdocnavi/bg
+ 31.87%    2.002      1 Template:Navigation_menu_2
+ 18.02%    1.132      2 Template:Version
+ 15.63%    0.982      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112180153 and revision id 1737626. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260118050119 and revision id 1737626. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
